fixed text alignment in ABOUT section

--- a/css/body.css
+++ b/css/body.css
@@ -86,6 +86,10 @@ a:hover {
 
 .avatar-subtitle {
     font-size: large;
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+    align-content: row;
 }
 
 #development {
@@ -105,6 +109,16 @@ a:hover {
 
 .dev-project-languages {
     padding-top: 1rem;
+}
+
+#about-section {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    padding: 10px;
+    text-align: center;
 }
 
 #credential {
